fixed some champs not showing

--- a/src/component/ChampionList/champion-list.scss
+++ b/src/component/ChampionList/champion-list.scss
@@ -1,10 +1,10 @@
 div.champion {
-    border: 1px solid;
-    margin-bottom: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
+	border: 1px solid;
+	margin-bottom: 5px;
+	margin-left: 5px;
+	margin-right: 5px;
 
-    img {
-        width: 50%;
-    }
+	img {
+		width: 30%;
+	}
 }
